--- a/myshelf/package.json
+++ b/myshelf/package.json
@@ -12,12 +12,16 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@web3modal/ethereum": "^2.7.0",
+    "@web3modal/react": "^2.7.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "viem": "^1.4.1",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@emotion/styled": "^11.11.0"
